@@ -128,7 +128,7 @@ SCM ly_truncate_list (int k, SCM l );
  SCM value = cached;  /* We store this one locally, since G++ -O2 fucks up else */   \
  if ( __builtin_constant_p ((x)))\
  {  if (!cached)\
-     value = cached =  scm_gc_protect_object (my_gh_symbol2scm((x)));\
+     value = cached =  scm_gc_protect_object (gh_symbol2scm((x)));\
  } else\
   value = gh_symbol2scm ((char*) (x)); \
   value; })
