@@ -10,7 +10,7 @@
 #include <stdio.h>
 #include <assert.h>
 #include <locale.h>
-#include <stdio.h>
+#include <string.h>
 
 #include "config.h"
 
