@@ -1,5 +1,7 @@
 2002-08-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* stepmake/bin/make-version.py: robustify.
+
 	* input/test/rhythm-excercise.ly: new file
 
 	* input/test/blank-notes.ly: new file
